eks/04-ingress-lab/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-api
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: identity-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
