eks/04-ingress-lab/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-api
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    # Descomenta si tienes certificado ACM:
    # alb.ingress.kubernetes.io/certificate-arn: <TU_CERT_ARN>
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    # alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identity-api
                port:
                  number: 80
          - path: /s3
            pathType: Prefix
            backend:
              service:
                name: identity-api
                port:
                  number: 80
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: identity-api
                port:
                  number: 80
